       - Fixed conversion Java Double/EDM.Double types in OData extension.
         Reported by Martin Grohmann.
       - Took care of the IPV6 addresses. Reported by Laurent Rustuel.
       - Added support of multiple levels of $expand.
         Contributed by Emmanuel Liossis. 
       - Fixed potential infinite loops while reading headers
         (issues #599 and #656). Reported by weiweiwang.
      
    - API changes
    - Misc
       - Prevent logging of verbose stack trace. Reported by Grzegorz Godlewski.

- 2.1.0 (09/20/2012)
    - Bug fixed
       - Added support of GWT 2.5.
    - API changes
    - Misc
    
- 2.1 Release Candidate 6 (08/22/2012)
    - Bug fixed
       - Fixed sharing of ClientResource context with the underlying connector, 
         when this ClientResource is used outside a Component.
       - Reduced the number of iterators created when internal NIO connector is 
         idle. Reported by Yan Zhou 
       - Fixed support for enabling and disabling cipher suites, restricting the 
         SSL protocol version and the requesting a client certificate, for all 
         connectors (internal and extensions). 
         Reported by Enoch Stephen, Jim Zuber and Andreas Schnabl.
       - Reduced CPU consumption of internal NIO/HTTP connector by using proper
         NIO selector wakeup logic instead of constant looping. 
         Reported by James Moger.
       - Fixed regression regarding JAXB namespace parsing.
         Reported by Jim Trainor, Jean Duteau and Lukas Niemeier.
       - Fixed alphanum comparator bug.
         Reported by Abdunnassar Usman, fixed by Rob Heittman.
       - ServerResource.doConditionalHandle now returns 406 if no acceptable 
         variant and strict mode is true in ConnegService.
         Contributed by Andrew Dennie.
    - API changes
       - Renamed Directory#setAlphaComparator and setAlphaNumComparator
         methods into useAlphaComparator and useAlphaNumComparator with